Renamed LSystems folder to LSystem2D

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set(engine_sources
 		src/engine.cc
 		src/utils/ini_configuration.cc
 		src/utils/l_parser.cc src/utils/l_parser.h
-		src/LSystems/LSystem2D.cc src/LSystems/LSystem2D.h src/LSystems/draw2DLines.cc src/LSystems/draw2DLines.h src/LSystems/LSystem2Lines2D.cc src/LSystems/LSystem2Lines2D.h)
+		src/LSystem2D/LSystem2D.cc src/LSystem2D/LSystem2D.h src/LSystem2D/draw2DLines.cc src/LSystem2D/draw2DLines.h src/LSystem2D/LSystem2Lines2D.cc src/LSystem2D/LSystem2Lines2D.h)
 
 ############################################################
 # Create an executable
