Started texture mapping a bit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ set(engine_sources
 		src/ZBuffering/ZBuffering.cc src/ZBuffering/ZBuffering.h
 		src/Fractal3D/Fractal3D.cc src/Fractal3D/Fractal3D.h
 		src/Figure3D/Transformations.cc src/Figure3D/Transformations.h
-		src/Lighting/Lighting.cc src/Lighting/Lighting.h)
+		src/Lighting/Lighting.cc src/Lighting/Lighting.h src/Texture/Texture.cc src/Texture/Texture.h)
 
 ############################################################
 # Create an executable
